refactor, add A2 parts 1-3

--- a/assignment1/features_solution_yorko.ipynb
+++ b/assignment1/features_solution_yorko.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. Image features exercise\n",
+    "# <center> cs231n. [A1, part 5](http://cs231n.github.io/assignments2018/assignment1/). Image features exercise\n",
+    "<img src='../img/cs231n_logo.png' width=70%>\n",
+    "    \n",
     "#### <center> **Solution by @yorko**\n",
     "\n",
     "*Complete and hand in this completed worksheet (including its outputs and any supporting code outside of the worksheet) with your assignment submission. For more details see the [assignments page](http://vision.stanford.edu/teaching/cs231n/assignments.html) on the course website.*\n",
@@ -52,10 +54,11 @@
    "source": [
     "from cs231n.features import color_histogram_hsv, hog_feature\n",
     "\n",
+    "PATH_TO_CIFAR = '/home/yorko/data/cifar-10-batches-py/'\n",
+    "\n",
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000):\n",
     "    # Load the raw CIFAR-10 data\n",
-    "    cifar10_dir = '/home/yorko/data/cifar-10-batches-py/'\n",
-    "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
+    "    X_train, y_train, X_test, y_test = load_CIFAR10(PATH_TO_CIFAR)\n",
     "    \n",
     "    # Subsample the data\n",
     "    mask = list(range(num_training, num_training + num_validation))\n",
