--- a/assignment1/knn_comments_yorko.ipynb
+++ b/assignment1/knn_comments_yorko.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. k-Nearest Neighbor (kNN) exercise\n",
-    "#### <center>  **Comments to `compute_distances_no_loops`** by @yorko"
+    "# <center> cs231n. [A1, part 1](http://cs231n.github.io/assignments2018/assignment1/). k-Nearest Neighbor (kNN) exercise\n",
+    "<img src='../img/cs231n_logo.png' width=70%>\n",
+    "    \n",
+    "#### <center>  **Comments on `compute_distances_no_loops`** by @yorko"
    ]
   },
   {
