--- a/assignment1/svm_solution_yorko.ipynb
+++ b/assignment1/svm_solution_yorko.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. Multiclass Support Vector Machine exercise\n",
-    "#### <center>**Solution by @yorko**\n",
+    "# <center> cs231n. [A1, part 2](http://cs231n.github.io/assignments2018/assignment1/). Multiclass Support Vector Machine exercise\n",
+    "<img src='../img/cs231n_logo.png' width=70%>\n",
+    "    \n",
+    "#### <center> **Solution by @yorko**\n",
     "\n",
     "*Complete and hand in this completed worksheet (including its outputs and any supporting code outside of the worksheet) with your assignment submission. For more details see the [assignments page](http://vision.stanford.edu/teaching/cs231n/assignments.html) on the course website.*\n",
     "\n",
@@ -16,7 +18,7 @@
     "- **check your implementation** using numerical gradient\n",
     "- use a validation set to **tune the learning rate and regularization** strength\n",
     "- **optimize** the loss function with **SGD**\n",
-    "- **visualize** the final learned weights\n"
+    "- **visualize** the final learned weights"
    ]
   },
   {
