--- a/assignment1/two_layer_net_solution_yorko.ipynb
+++ b/assignment1/two_layer_net_solution_yorko.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> cs231n. Implementing a Neural Network\n",
+    "# <center> cs231n. [A1, part 4](http://cs231n.github.io/assignments2018/assignment1/). Two-layer net\n",
+    "<img src='../img/cs231n_logo.png' width=70%>\n",
+    "    \n",
     "#### <center> **Solution by @yorko**\n",
     "\n",
     "In this exercise we will develop a neural network with fully-connected layers to perform classification, and test it out on the CIFAR-10 dataset."
@@ -282,6 +284,8 @@
    "source": [
     "from cs231n.data_utils import load_CIFAR10\n",
     "\n",
+    "PATH_TO_CIFAR = '/home/yorko/data/cifar-10-batches-py/'\n",
+    "\n",
     "def get_CIFAR10_data(num_training=49000, num_validation=1000, num_test=1000):\n",
     "    \"\"\"\n",
     "    Load the CIFAR-10 dataset from disk and perform preprocessing to prepare\n",
@@ -289,8 +293,7 @@
     "    we used for the SVM, but condensed to a single function.  \n",
     "    \"\"\"\n",
     "    # Load the raw CIFAR-10 data\n",
-    "    cifar10_dir = '/home/yorko/data/cifar-10-batches-py/'\n",
-    "    X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
+    "    X_train, y_train, X_test, y_test = load_CIFAR10(PATH_TO_CIFAR)\n",
     "        \n",
     "    # Subsample the data\n",
     "    mask = list(range(num_training, num_training + num_validation))\n",
