add A3 part 1 - image captioning with RNNs

--- a/assignment3/RNN_Captioning_solution_yorko.ipynb
+++ b/assignment3/RNN_Captioning_solution_yorko.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Image Captioning with RNNs\n",
+    "# <center> cs231n. [A3, part 1](http://cs231n.github.io/assignments2018/assignment3/). Image Captioning with RNNs\n",
+    "<img src='../img/cs231n_logo.png' width=70%>\n",
+    "    \n",
+    "#### <center> **Solution by @yorko**\n",
+    "\n",
+    "# \n",
     "In this exercise you will implement a vanilla recurrent neural networks and use them it to train a model that can generate novel captions for images."
    ]
   },
