modify a1 part 1 kNN - upgrade to 2019 version

--- a/assignment1/knn.ipynb
+++ b/assignment1/knn.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-title"
+    ]
+   },
    "source": [
     "# k-Nearest Neighbor (kNN) exercise\n",
     "\n",
@@ -20,7 +24,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Run some setup code for this notebook.\n",
@@ -29,8 +37,6 @@
     "import numpy as np\n",
     "from cs231n.data_utils import load_CIFAR10\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from __future__ import print_function\n",
     "\n",
     "# This is a bit of magic to make matplotlib figures appear inline in the notebook\n",
     "# rather than in a new window.\n",
@@ -48,11 +54,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Load the raw CIFAR-10 data.\n",
     "cifar10_dir = 'cs231n/datasets/cifar-10-batches-py'\n",
+    "\n",
+    "# Cleaning up variables to prevent loading data multiple times (which may cause memory issue)\n",
+    "try:\n",
+    "   del X_train, y_train\n",
+    "   del X_test, y_test\n",
+    "   print('Clear previously loaded data.')\n",
+    "except:\n",
+    "   pass\n",
+    "\n",
     "X_train, y_train, X_test, y_test = load_CIFAR10(cifar10_dir)\n",
     "\n",
     "# As a sanity check, we print out the size of the training and test data.\n",
@@ -65,7 +84,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Visualize some examples from the dataset.\n",
@@ -89,7 +112,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Subsample the data for more efficient code execution in this exercise\n",
@@ -101,15 +128,8 @@
     "num_test = 500\n",
     "mask = list(range(num_test))\n",
     "X_test = X_test[mask]\n",
-    "y_test = y_test[mask]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_test = y_test[mask]\n",
+    "\n",
     "# Reshape the image data into rows\n",
     "X_train = np.reshape(X_train, (X_train.shape[0], -1))\n",
     "X_test = np.reshape(X_test, (X_test.shape[0], -1))\n",
@@ -119,7 +139,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore"
+    ]
+   },
    "outputs": [],
    "source": [
     "from cs231n.classifiers import KNearestNeighbor\n",
@@ -141,6 +165,8 @@
     "2. Given these distances, for each test example we find the k nearest examples and have them vote for the label\n",
     "\n",
     "Lets begin with computing the distance matrix between all training and test examples. For example, if there are **Ntr** training examples and **Nte** test examples, this stage should result in a **Nte x Ntr** matrix where each element (i,j) is the distance between the i-th test and j-th train example.\n",
+    "\n",
+    "**Note: For the three distance computations that we require you to implement in this notebook, you may not use the np.linalg.norm() function that numpy provides.**\n",
     "\n",
     "First, open `cs231n/classifiers/k_nearest_neighbor.py` and implement the function `compute_distances_two_loops` that uses a (very inefficient) double loop over all pairs of (test, train) examples and computes the distance matrix one element at a time."
    ]
@@ -173,19 +199,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
    "source": [
-    "**Inline Question #1:** Notice the structured patterns in the distance matrix, where some rows or columns are visible brighter. (Note that with the default color scheme black indicates low distances while white indicates high distances.)\n",
+    "**Inline Question 1** \n",
+    "\n",
+    "Notice the structured patterns in the distance matrix, where some rows or columns are visible brighter. (Note that with the default color scheme black indicates low distances while white indicates high distances.)\n",
     "\n",
     "- What in the data is the cause behind the distinctly bright rows?\n",
-    "- What causes the columns?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Your Answer**: *fill this in.*\n",
+    "- What causes the columns?\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$ *fill this in.*\n",
     "\n"
    ]
   },
@@ -215,9 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "y_test_pred = classifier.predict_labels(dists, k=5)\n",
@@ -234,9 +259,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
+   "source": [
+    "**Inline Question 2**\n",
+    "\n",
+    "We can also use other distance metrics such as L1 distance.\n",
+    "For pixel values $p_{ij}^{(k)}$ at location $(i,j)$ of some image $I_k$, \n",
+    "\n",
+    "the mean $\\mu$ across all pixels over all images is $$\\mu=\\frac{1}{nhw}\\sum_{k=1}^n\\sum_{i=1}^{h}\\sum_{j=1}^{w}p_{ij}^{(k)}$$\n",
+    "And the pixel-wise mean $\\mu_{ij}$ across all images is \n",
+    "$$\\mu_{ij}=\\frac{1}{n}\\sum_{k=1}^np_{ij}^{(k)}.$$\n",
+    "The general standard deviation $\\sigma$ and pixel-wise standard deviation $\\sigma_{ij}$ is defined similarly.\n",
+    "\n",
+    "Which of the following preprocessing steps will not change the performance of a Nearest Neighbor classifier that uses L1 distance? Select all that apply.\n",
+    "1. Subtracting the mean $\\mu$ ($\\tilde{p}_{ij}^{(k)}=p_{ij}^{(k)}-\\mu$.)\n",
+    "2. Subtracting the per pixel mean $\\mu_{ij}$  ($\\tilde{p}_{ij}^{(k)}=p_{ij}^{(k)}-\\mu_{ij}$.)\n",
+    "3. Subtracting the mean $\\mu$ and dividing by the standard deviation $\\sigma$.\n",
+    "4. Subtracting the pixel-wise mean $\\mu_{ij}$ and dividing by the pixel-wise standard deviation $\\sigma_{ij}$.\n",
+    "5. Rotating the coordinate axes of the data.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$\n",
+    "\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Now lets speed up distance matrix computation by using partial vectorization\n",
@@ -251,7 +311,7 @@
     "# root of the squared sum of differences of all elements; in other words, reshape\n",
     "# the matrices into vectors and compute the Euclidean distance between them.\n",
     "difference = np.linalg.norm(dists - dists_one, ord='fro')\n",
-    "print('Difference was: %f' % (difference, ))\n",
+    "print('One loop difference was: %f' % (difference, ))\n",
     "if difference < 0.001:\n",
     "    print('Good! The distance matrices are the same')\n",
     "else:\n",
@@ -261,7 +321,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true,
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Now implement the fully vectorized version inside compute_distances_no_loops\n",
@@ -270,7 +335,7 @@
     "\n",
     "# check that the distance matrix agrees with the one we computed before:\n",
     "difference = np.linalg.norm(dists - dists_two, ord='fro')\n",
-    "print('Difference was: %f' % (difference, ))\n",
+    "print('No loop difference was: %f' % (difference, ))\n",
     "if difference < 0.001:\n",
     "    print('Good! The distance matrices are the same')\n",
     "else:\n",
@@ -280,7 +345,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Let's compare how fast the implementations are\n",
@@ -303,7 +372,11 @@
     "no_loop_time = time_function(classifier.compute_distances_no_loops, X_test)\n",
     "print('No loop version took %f seconds' % no_loop_time)\n",
     "\n",
-    "# you should see significantly faster performance with the fully vectorized implementation"
+    "# You should see significantly faster performance with the fully vectorized implementation!\n",
+    "\n",
+    "# NOTE: depending on what machine you're using, \n",
+    "# you might not see a speedup when you go from two loops to one loop, \n",
+    "# and might even see a slow-down."
    ]
   },
   {
@@ -318,7 +391,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "code"
+    ]
+   },
    "outputs": [],
    "source": [
     "num_folds = 5\n",
@@ -333,10 +410,9 @@
     "# y_train_folds[i] is the label vector for the points in X_train_folds[i].     #\n",
     "# Hint: Look up the numpy array_split function.                                #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                                 END OF YOUR CODE                             #\n",
-    "################################################################################\n",
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "# A dictionary holding the accuracies for different values of k that we find\n",
     "# when running cross-validation. After running cross-validation,\n",
@@ -353,10 +429,9 @@
     "# last fold as a validation set. Store the accuracies for all fold and all     #\n",
     "# values of k in the k_to_accuracies dictionary.                               #\n",
     "################################################################################\n",
+    "# *****START OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n\n",
     "pass\n",
-    "################################################################################\n",
-    "#                                 END OF YOUR CODE                             #\n",
-    "################################################################################\n",
+    "\n# *****END OF YOUR CODE (DO NOT DELETE/MODIFY THIS LINE)*****\n",
     "\n",
     "# Print out the computed accuracies\n",
     "for k in sorted(k_to_accuracies):\n",
@@ -367,7 +442,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "pdf-ignore-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# plot the raw observations\n",
@@ -404,6 +483,30 @@
     "num_correct = np.sum(y_test_pred == y_test)\n",
     "accuracy = float(num_correct) / num_test\n",
     "print('Got %d / %d correct => accuracy: %f' % (num_correct, num_test, accuracy))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": [
+     "pdf-inline"
+    ]
+   },
+   "source": [
+    "**Inline Question 3**\n",
+    "\n",
+    "Which of the following statements about $k$-Nearest Neighbor ($k$-NN) are true in a classification setting, and for all $k$? Select all that apply.\n",
+    "1. The decision boundary of the k-NN classifier is linear.\n",
+    "2. The training error of a 1-NN will always be lower than that of 5-NN.\n",
+    "3. The test error of a 1-NN will always be lower than that of a 5-NN.\n",
+    "4. The time needed to classify a test example with the k-NN classifier grows with the size of the training set.\n",
+    "5. None of the above.\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Answer:}$\n",
+    "\n",
+    "\n",
+    "$\\color{blue}{\\textit Your Explanation:}$\n",
+    "\n"
    ]
   }
  ],
